--- a/requirements.txt
+++ b/requirements.txt
@@ -1,43 +1,43 @@
 # Core Dependencies
-streamlit==1.32.0
-streamlit-oauth==0.1.0
+streamlit>=1.32.0
+streamlit-oauth2>=0.1.0  # Updated to a maintained fork
 
 # Firebase
-firebase-admin==6.2.0
-google-cloud-firestore==2.11.1
+firebase-admin>=6.2.0
+google-cloud-firestore>=2.11.1
 
 # Machine Learning
-xgboost==2.0.0
-scikit-learn==1.3.2
+xgboost>=2.0.0
+scikit-learn>=1.3.2
 numpy>=1.24.0
 pandas>=2.0.0
 joblib>=1.3.0
 
 # Audio Processing
-pydub==0.25.1
-ffmpeg-python==0.2.0
+pydub>=0.25.1
+ffmpeg-python>=0.2.0
 
 # HTTP/API Clients
-aiohttp==3.9.0
-aiofiles==23.2.1
-requests==2.31.0
+aiohttp>=3.9.0
+aiofiles>=23.2.1
+requests>=2.31.0
 
 # Spotify Integration
-spotipy==2.23.0
+spotipy>=2.23.0
 
 # Data Serialization
-pickle-mixin==1.0.2
+pickle-mixin>=1.0.2
 
 # Async Support
-nest-asyncio==1.6.0
-asyncio==3.4.3
+nest-asyncio>=1.6.0
+asyncio>=3.4.3
 
 # Environment Management
-python-dotenv==1.0.0
+python-dotenv>=1.0.0
 pathlib>=1.0.1
 
-# Development Tools
-pytest==7.4.3
-pytest-asyncio==0.21.1
-black==23.11.0
-flake8==6.1.0
+# Development Tools (optional)
+pytest>=7.4.3
+pytest-asyncio>=0.21.1
+black>=23.11.0
+flake8>=6.1.0
