--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,9 @@
 # Core Dependencies
 streamlit>=1.32.0
-streamlit-authenticator>=0.2.0  # More reliable alternative for authentication
+
+google-auth-oauthlib>=1.0.0
+google-auth>=2.0.0
+requests>=2.25.0
 
 # Firebase
 firebase-admin>=6.2.0
