--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 # Core Dependencies
 streamlit>=1.32.0
+nest_asyncio>=1.5.6  # Added this line for asyncio support
 
+# Authentication
 google-auth-oauthlib>=1.0.0
 google-auth>=2.0.0
 requests>=2.25.0
@@ -23,7 +25,6 @@ ffmpeg-python>=0.2.0
 # HTTP/API Clients
 aiohttp>=3.9.0
 aiofiles>=23.2.1
-requests>=2.31.0
 
 # Spotify Integration
 spotipy>=2.23.0
@@ -33,10 +34,3 @@ pickle-mixin>=1.0.2
 
 # Environment Management
 python-dotenv>=1.0.0
-pathlib>=1.0.1
-
-# Development Tools (optional)
-pytest>=7.4.3
-pytest-asyncio>=0.21.1
-black>=23.11.0
-flake8>=6.1.0
