--- a/requirements.txt
+++ b/requirements.txt
@@ -36,5 +36,6 @@ pickle-mixin>=1.0.2
 python-dotenv>=1.0.0
 
 # Audio Processing
-pydub>=0.25.1
-ffmpeg-python>=0.2.0
+librosa>=0.10.0
+soundfile>=0.12.1
+numpy>=1.24.0
