--- a/requirements.txt
+++ b/requirements.txt
@@ -1,41 +1,43 @@
 # Core Dependencies
 streamlit>=1.32.0
-nest_asyncio>=1.5.6  # Added this line for asyncio support
+nest_asyncio>=1.5.6  # For asyncio support in Streamlit
+python-dotenv>=1.0.0  # For environment variables
 
-# Authentication
+# Authentication & Web
 google-auth-oauthlib>=1.0.0
 google-auth>=2.0.0
 requests>=2.25.0
+aiohttp>=3.8.0  # For async HTTP requests
 
-# Firebase
-firebase-admin>=6.2.0
-google-cloud-firestore>=2.11.1
+# Audio Processing
+soundfile>=0.12.1
+ffmpeg-python>=0.2.0
+numpy>=1.24.0  # Required by soundfile
+librosa>=0.10.0  # For audio analysis
+
+# Core Dependencies
+streamlit>=1.32.0
+nest_asyncio>=1.5.6  # For asyncio support in Streamlit
+python-dotenv>=1.0.0  # For environment variables
+
+# HTTP/API Clients
+aiohttp>=3.9.0  # For async HTTP requests
+
+# File Operations
+aiofiles>=23.2.1  # For async file operations
+
+# Audio Processing
+soundfile>=0.12.1
+ffmpeg-python>=0.2.0
+librosa>=0.10.0  # For audio analysis
+pydub>=0.25.1  # For audio format conversion
+
+# Spotify Integration
+spotipy>=2.23.0  # Spotify Web API wrapper
 
 # Machine Learning
 xgboost>=2.0.0
 scikit-learn>=1.3.2
-numpy>=1.24.0
 pandas>=2.0.0
 joblib>=1.3.0
-
-# Audio Processing
-pydub>=0.25.1
-ffmpeg-python>=0.2.0
-
-# HTTP/API Clients
-aiohttp>=3.9.0
-aiofiles>=23.2.1
-
-# Spotify Integration
-spotipy>=2.23.0
-
-# Data Serialization
-pickle-mixin>=1.0.2
-
-# Environment Management
-python-dotenv>=1.0.0
-
-# Audio Processing
-librosa>=0.10.0
-soundfile>=0.12.1
 numpy>=1.24.0
