--- a/requirements.txt
+++ b/requirements.txt
@@ -3,29 +3,35 @@ streamlit>=1.32.0
 nest_asyncio>=1.5.6  # For asyncio support in Streamlit
 python-dotenv>=1.0.0  # For environment variables
 
+# Authentication
+google-auth-oauthlib>=1.0.0
+google-auth-httplib2>=0.1.0
+google-api-python-client>=2.0.0
+google-auth>=2.0.0
+
 # Firebase
-firebase-admin>=6.2.0  # Firebase Admin SDK
-google-cloud-firestore>=2.11.1  # Required for Firestore
-google-api-python-client>=2.0.0  # Required for Firebase Admin
-google-auth>=2.0.0  # Authentication for Firebase
+firebase-admin>=6.2.0
+google-cloud-firestore>=2.11.1
 
 # HTTP/API Clients
-aiohttp>=3.9.0  # For async HTTP requests
+aiohttp>=3.9.0
+requests>=2.25.0
 
 # File Operations
-aiofiles>=23.2.1  # For async file operations
+aiofiles>=23.2.1
 
 # Audio Processing
 soundfile>=0.12.1
 ffmpeg-python>=0.2.0
-librosa>=0.10.0  # For audio analysis
-pydub>=0.25.1  # For audio format conversion
+librosa>=0.10.0
+pydub>=0.25.1
 
 # Spotify Integration
-spotipy>=2.23.0  # Spotify Web API wrapper
+spotipy>=2.23.0
 
 # Machine Learning
 xgboost>=2.0.0
 scikit-learn>=1.3.2
 pandas>=2.0.0
 joblib>=1.3.0
+numpy>=1.24.0
