--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,10 @@
 # Core Dependencies
 streamlit>=1.32.0
-nest_asyncio>=1.5.6  # For asyncio support in Streamlit
-python-dotenv>=1.0.0  # For environment variables
+python-dotenv>=1.0.0
 
 # Authentication
+authlib>=1.2.1
+requests-oauthlib>=1.3.1
 google-auth-oauthlib>=1.0.0
 google-auth-httplib2>=0.1.0
 google-api-python-client>=2.0.0
@@ -15,7 +16,7 @@ google-cloud-firestore>=2.11.1
 
 # HTTP/API Clients
 aiohttp>=3.9.0
-requests>=2.25.0
+requests>=2.31.0
 
 # File Operations
 aiofiles>=23.2.1
@@ -34,4 +35,6 @@ xgboost>=2.0.0
 scikit-learn>=1.3.2
 pandas>=2.0.0
 joblib>=1.3.0
-numpy>=1.24.0
+
+# Async Support
+nest_asyncio>=1.5.6
